# bsmedit

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  backup.py  bsmedit.nsi  bsmedit.py  bsmedit.pyw  build.py  build_xpm.py  install.py  pyproject.toml  readme.md  readme.txt  readme_pip.md  setup.py
bsm/: __init__.py  _bsmbackend.py  _docstring.py  _graphxpm.py  _misctoolsxpm.py  _pymgr_helpers.py  _utility.py  autocomplete.py  backend_bsm.py  bsmplot.py  bsmplotxpm.py  bsmprop.py  bsmpropgrid.py  debugtool.py  dirtreectrl.py  editor.py  graph.py  misctools.py  progrid.py  prop.py  propgrid.py  pyeditor.py  pyeditorxpm.py  pysim.py  sim.py  sim_engine.py  sim_process.py  simengine.py  simprocess.py  simxpm.py
bsmedit/: __init__.py  __main__.py  bsmshell.py  c2p.py  debugger.py  frameplus.py  main.py  mainframe.py  mainframexpm.py  version.py
bsmedit/bsm/: __init__.py  _bsmbackend.py  _debugtoolxpm.py  _docstring.py  _editorxpm.py  _pymgr_helpers.py  _utility.py  autocomplete.py  bsm.h  bsmbackend.py  bsmpropxpm.py  bsmshell.py  bsmxpm.py  csim.py  csvs.py  debugger.py  debugtool.py  dirtreectrl.py  docstring.py  editor.py  editor_base.py  fileviewbase.py  graph.py  graph_canvas.py  graph_common.py  graph_datatip.py  graph_dock.py  graph_edit.py  graph_subplot.py  graph_timeline.py  graph_toolbar.py  lineeditor.py  listctrl_base.py  load_vcd.py  mat.py  misctools.py  prop.py  propgrid.py  pymgr_helpers.py  pysim.py  (+10 more)
bsmedit/ico/: mainframe.icns
bsmedit/pvcd/: pvcd.py
docs/: CNAME  bsmdoc.cfg  index.bsmdoc  index.html  index_content.bsmdoc
docs/css/: bsmdoc.css  menu.css
docs/images/: figure_select_axis.mov  start_run.mov
docs/js/: bsmdoc.js  menu.js
examples/: Makefile.am  Makefile.in  example.py  start.py
examples/cexample/: Makefile  cexample.h  cexample.py  main.c
examples/start/: Makefile  main.cpp  start.sln  start.vcproj  start.vcxproj  top.cpp  top.h
examples/tb_dll/: Makefile  main.cpp  sub.cpp  sub.h  tb_dll.sln  tb_dll.vcxproj  tb_dll.vcxproj.filters  top.cpp  top.h
examples/wave/: Makefile  main.c  wave.py
examples/waves/: Makefile  __init__.py  main.c  setup.py  waves.h  waves.py  wavesxpm.py
examples/waves/waves/: __init__.py  waves.py
main/: DirTreeCtrl.py  bsm_dlg_helper.py  bsmhelp.py  bsmhelpxpm.py  bsmshell.py  debugger.py  debuggerxpm.py  dirpanelxpm.py  frameplus.py  main.py  mainframexpm.py  version.py
systemc-2.3.1/: Makefile.in  aclocal.m4  configure  configure.ac
systemc-2.3.1/docs/: Makefile.in
systemc-2.3.1/examples/: Makefile.in
systemc-2.3.1/examples/sysc/: Makefile.in  README.txt
systemc-2.3.1/examples/sysc/fir/: fir.vcproj  fir_common.vcproj  fir_rtl.vcproj
systemc-2.3.1/examples/sysc/pipe/: pipe.vcproj
systemc-2.3.1/examples/sysc/pkt_switch/: pkt_switch.vcproj
systemc-2.3.1/examples/sysc/risc_cpu/: risc_cpu.vcproj
systemc-2.3.1/examples/sysc/rsa/: rsa.vcproj
systemc-2.3.1/examples/sysc/simple_bus/: simple_bus.vcproj
systemc-2.3.1/examples/sysc/simple_fifo/: simple_fifo.vcproj
systemc-2.3.1/examples/sysc/simple_perf/: simple_perf.vcproj
systemc-2.3.1/examples/tlm/: Makefile.in
systemc-2.3.1/examples/tlm/build-msvc/: tlm.sln
systemc-2.3.1/examples/tlm/common/: Makefile.in
systemc-2.3.1/msvc80/SystemC/: SystemC.VC.VC.opendb  SystemC.sln  SystemC.vcproj  SystemC.vcxproj  SystemC.vcxproj.filters  UpgradeLog.htm
systemc-2.3.1/src/: Makefile.am  Makefile.in  systemc  systemc.h
systemc-2.3.1/src/bsm/: Makefile.am  Makefile.in  bsm_buffer_intf.h  bsm_object.h  bsm_sim_context.h  bsm_sim_context_impl.cpp  bsm_sim_context_impl.h  bsm_sysc.h  reg_type.h  sc_bsm_trace.cpp  sc_bsm_trace.h  sc_bsm_trace_buf.cpp  sc_bsm_trace_buf.h
systemc-2.3.1/src/sysc/: Makefile.am  Makefile.in
systemc-2.3.1/src/sysc/bsm/: Makefile.am  Makefile.in  bsm_buffer_intf.h  bsm_object.h  bsm_sim_context_impl.cpp  bsm_sysc.h  reg_type.h  sc_bsm_trace.cpp  sc_bsm_trace.h  sc_bsm_trace_buf.cpp  (+1 more)
systemc-2.3.1/src/tlm_core/: Makefile.in
systemc-2.3.1/src/tlm_utils/: Makefile.in
web/: index.bsmdoc  index.html  index_content - Copy.bsmdoc  index_content.bsmdoc
web/css/: bsmdoc.css
web/js/: bsmdoc.js  menu.js
xsc/: bsm.cpp  bsm.h  xsc_array.h  xsc_property.h
(+45 files in other folders)
